--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -5,19 +5,18 @@
     android:id="@+id/frameLayout8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.transactions.AllTransactions"
-    >
+    tools:context=".fragments.transactions.AllTransactions">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecViewTransactionsHolder"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="2dp"/>
+        app:layout_constraintTop_toBottomOf="@id/main_container" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -30,29 +29,158 @@
         android:contentDescription="@string/settings"
         app:backgroundTint="@color/fb_color"
         app:fabCustomSize="60dp"
-        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="40dp"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="vertical"
+        android:layout_height="60dp"
         android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layoutDescription="@xml/fragment_all_transactions_xml_main_container_scene"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:padding="10dp">
+        app:layout_constraintTop_toTopOf="parent">
 
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Balance: " />
-    </LinearLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
+    <TextView
+        android:id="@+id/text_currentBalance"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="$4,000.00 MX"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/text_currentBalanceFix"
+        app:layout_constraintStart_toStartOf="@+id/guideline12"
+        app:layout_constraintTop_toTopOf="@+id/text_currentBalanceFix" />
+
+    <TextView
+        android:id="@+id/text_currentBalanceFix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:text="Current Balance:"
+        app:layout_constraintBottom_toBottomOf="@+id/main_container"
+        app:layout_constraintStart_toStartOf="@+id/main_container"
+        app:layout_constraintTop_toTopOf="@+id/main_container" />
+    <TextView
+        android:id="@+id/text_startingBalance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$2,000.00 MX"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:alpha="0"
+        app:layout_constraintBottom_toBottomOf="@+id/text_startBalanceFix"
+        app:layout_constraintStart_toStartOf="@+id/guideline12"
+        app:layout_constraintTop_toTopOf="@+id/text_startBalanceFix" />
+
+    <TextView
+        android:id="@+id/text_startBalanceFix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Starting Balance:"
+        android:alpha="0"
+        app:layout_constraintBottom_toTopOf="@+id/text_currentBalanceFix"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintEnd_toEndOf="@id/text_currentBalanceFix"
+        app:layout_constraintStart_toStartOf="@id/text_currentBalanceFix"
+        />
+
+    <TextView
+        android:id="@+id/text_receivables"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$9,000.00 MX"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:alpha="0"
+        app:layout_constraintBottom_toBottomOf="@+id/text_receivablesFix"
+        app:layout_constraintStart_toStartOf="@+id/guideline12"
+        app:layout_constraintTop_toTopOf="@+id/text_receivablesFix" />
+
+    <TextView
+        android:id="@+id/text_receivablesFix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Starting Balance:"
+        android:alpha="0"
+        app:layout_constraintTop_toBottomOf="@+id/text_currentBalanceFix"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@id/text_currentBalanceFix"
+        app:layout_constraintStart_toStartOf="@id/text_currentBalanceFix"
+        />
+
+    <TextView
+        android:id="@+id/text_payables"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-$5,000.00 MX"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:alpha="0"
+        app:layout_constraintBottom_toBottomOf="@+id/text_payablesFix"
+        app:layout_constraintStart_toStartOf="@+id/guideline12"
+        app:layout_constraintTop_toTopOf="@+id/text_payablesFix" />
+
+    <TextView
+        android:id="@+id/text_payablesFix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Starting Balance:"
+        android:alpha="0"
+        app:layout_constraintTop_toBottomOf="@+id/text_receivablesFix"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@id/text_currentBalanceFix"
+        app:layout_constraintStart_toStartOf="@id/text_currentBalanceFix"
+        />
+    <TextView
+        android:id="@+id/text_futureBalance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-$5,000.00 MX"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:alpha="0"
+        app:layout_constraintBottom_toBottomOf="@+id/text_futureBalanceFix"
+        app:layout_constraintStart_toStartOf="@+id/guideline12"
+        app:layout_constraintTop_toTopOf="@+id/text_futureBalanceFix" />
+
+    <TextView
+        android:id="@+id/text_futureBalanceFix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Starting Balance:"
+        android:alpha="0"
+        app:layout_constraintTop_toBottomOf="@+id/text_payablesFix"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@id/text_currentBalanceFix"
+        app:layout_constraintStart_toStartOf="@id/text_currentBalanceFix"
+        />
+
+    <ImageView
+        android:id="@+id/arrow_to_drop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/main_container"
+        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="239dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
