--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -20,6 +20,22 @@
         app:layout_constraintTop_toBottomOf="@id/main_container" />
 
 
+    <Button
+        android:id="@+id/btn_selectMonth"
+        android:text="September 2021"
+        android:textSize="12dp"
+        android:paddingHorizontal="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:alpha="1"
+        android:background="@drawable/background_buttons"
+        android:contentDescription="@string/settings"
+        app:layout_constraintEnd_toEndOf="@+id/RecViewTransactionsHolder"
+        app:layout_constraintTop_toTopOf="@+id/RecViewTransactionsHolder"
+        />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_new_TransactionFAB"
         android:layout_width="wrap_content"
@@ -30,6 +46,7 @@
         android:contentDescription="@string/settings"
         app:backgroundTint="@color/fb_color"
         app:fabCustomSize="60dp"
+        android:alpha="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="40dp"
@@ -212,6 +229,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
+
 
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
