--- a/app/src/main/res/xml/fragment_all_transactions_scene.xml
+++ b/app/src/main/res/xml/fragment_all_transactions_scene.xml
@@ -166,6 +166,26 @@
             android:layout_marginEnd="10dp"
             android:alpha="1"
             android:layout_marginRight="10dp" />
+        <Constraint
+            android:id="@+id/btn_new_TransactionFAB"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            android:alpha="0"
+            android:layout_marginRight="20dp" />
+        <Constraint
+            android:id="@+id/btn_selectMonth"
+            motion:layout_constraintEnd_toEndOf="@+id/RecViewTransactionsHolder"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginEnd="10dp"
+            android:alpha="0"
+            motion:layout_constraintTop_toTopOf="@+id/RecViewTransactionsHolder"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp" />
 
     </ConstraintSet>
 </MotionScene>
