--- a/app/src/main/res/xml/fragment_all_transactions_scene.xml
+++ b/app/src/main/res/xml/fragment_all_transactions_scene.xml
@@ -168,20 +168,11 @@
             android:layout_marginEnd="10dp"
             android:alpha="1"
             android:layout_marginRight="10dp" />
-        <Constraint
-            android:id="@+id/btn_new_TransactionFAB"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="20dp"
-            android:alpha="0"
-            android:layout_marginRight="20dp" />
+
         <Constraint
             android:id="@+id/btn_selectMonth"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:alpha="1"
             motion:layout_constraintStart_toStartOf="@id/guideline12"
             motion:layout_constraintBottom_toBottomOf="@id/text_selectedMonthFix"
@@ -196,6 +187,16 @@
             motion:layout_constraintStart_toStartOf="@+id/main_container"
             android:id="@+id/text_selectedMonthFix"
             />
+        <Constraint
+            android:id="@+id/btn_newFAB"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            android:alpha="0"
+            android:layout_marginRight="20dp" />
 
     </ConstraintSet>
 </MotionScene>
