animated floating menu Working

--- a/app/src/main/res/anim/pop_down_fabs.xml
+++ b/app/src/main/res/anim/pop_down_fabs.xml
@@ -7,14 +7,14 @@
         android:fromYDelta="0%"
         android:toYDelta="100%"
         />
-    <scale
+   <!-- <scale
         android:pivotY="50%"
         android:pivotX="50%"
-        android:fromXScale="0.7"
-        android:fromYScale="0.7"
-        android:toXScale="0.7"
-        android:toYScale="0.7"
-        />
+        android:fromXScale="0.8"
+        android:fromYScale="0.8"
+        android:toXScale="0.8"
+        android:toYScale="0.8"
+        />-->
     <alpha
         android:fromAlpha="100"
         android:toAlpha="0"
