--- a/app/src/main/res/anim/pop_up_fabs.xml
+++ b/app/src/main/res/anim/pop_up_fabs.xml
@@ -7,12 +7,12 @@
         android:fromYDelta="100%"
         android:toYDelta="0%"
         />
-    <scale
+  <!--  <scale
         android:pivotY="50%"
         android:pivotX="50%"
-        android:toXScale="0.7"
-        android:toYScale="0.7"
-        />
+        android:toXScale="0.8"
+        android:toYScale="0.8"
+        />-->
     <alpha
         android:fromAlpha="0"
         android:toAlpha="100"
