--- a/app/src/main/res/anim/rotate_close.xml
+++ b/app/src/main/res/anim/rotate_close.xml
@@ -8,6 +8,14 @@
         android:pivotY="50%"
         android:toDegrees="0"
         android:duration = "300"/>
+    <scale
+        android:pivotY="50%"
+        android:pivotX="50%"
+        android:fromXScale="1"
+        android:fromYScale="1"
+        android:toXScale="1"
+        android:toYScale="1"
+        />
 
 
 </set>
