--- a/app/src/main/res/anim/rotate_open.xml
+++ b/app/src/main/res/anim/rotate_open.xml
@@ -8,6 +8,12 @@
         android:pivotY="50%"
         android:toDegrees="135"
         android:duration = "300"/>
+    <scale
+        android:pivotY="50%"
+        android:pivotX="50%"
+        android:toXScale="0.8"
+        android:toYScale="0.8"
+        />
 
 
 </set>
